<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Demo Redux</string>
    <string name="action_settings">Settings</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="username_optional">Username (Optional)</string>
    <string name="birthday">Birthday</string>
    <string name="signup">Sign Up</string>
    <string name="or">Or</string>
    <string name="suggest_register">Touch here if you don\'t have an account</string>
    <string name="suggest_login_and_social">Touch here if you have an account or Social Network</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm">Confirm</string>
    <string name="suggest_login_social_2">Access your existing account</string>

    <string name="errmsg_field_required">Field Required</string>
    <string name="errmsg_email_malformed">Not an email address</string>
    <string name="errmsg_email_notfound">Account not found</string>
    <string name="errmsg_login_failed">Login Failed. Ensure that the email and password are registered</string>
    <string name="errmsg_offline">Please check your internet connection and retry</string>
    <string name="errmsg_password_invalid">Invalid Password</string>
    <string name="errmsg_password_unmatch">Password don\'t match</string>
    <string name="errmsg_username_invalid">Invalid username</string>
    <string name="errmsg_name_invalid">Invalid name</string>
    <string name="errmsg_invalid_email">Invalid Email</string>
    <string name="label_sign_in">Sign In</string>
    <string name="label_email">Email</string>
    <string name="errmsg_service_fail">Oops, something where wrong. Please try it later</string>
    <string name="errmsg_registration_failed">Error on sign up. Please try later.</string>
    <string name="date_format" >%1d/%2d/%3d</string>
    <string name="message_accesing">Starting session</string>
    <string name="message_account_created">New account created succesfully</string>

</resources>
