<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:id="@+id/txtform_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_firstname_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:textColor="@color/black">

                <EditText
                    android:id="@+id/txt_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/first_name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_lastname_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/txt_firstname"
                android:layout_weight="30"
                android:textColor="@color/black">

                <EditText
                    android:id="@+id/txt_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/last_name" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt_email_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtform_name"
            android:textColor="@color/black">

            <EditText
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableEnd="@drawable/ic_email_black_24dp"
                android:drawableRight="@drawable/ic_email_black_24dp"
                android:drawableTint="@color/divider"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingRight="4dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt_username_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_email_label"
            android:textColor="@color/black">

            <EditText
                android:id="@+id/txt_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableEnd="@drawable/ic_person_black_24dp"
                android:drawableRight="@drawable/ic_person_black_24dp"
                android:drawableTint="@color/divider"
                android:hint="@string/username_optional"
                android:paddingRight="4dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt_password_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_username_label"
            android:textColor="@color/black">

            <EditText
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableEnd="@drawable/ic_vpn_key_black_24dp"
                android:drawableRight="@drawable/ic_vpn_key_black_24dp"
                android:drawableTint="@color/divider"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingRight="4dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt_password_confirm_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_password_label"
            android:textColor="@color/black">

            <EditText
                android:id="@+id/txt_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableEnd="@drawable/ic_vpn_key_black_24dp"
                android:drawableRight="@drawable/ic_vpn_key_black_24dp"
                android:drawableTint="@color/divider"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingRight="4dp" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/layout_birthdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_password_confirm_label"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_birthdate_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="80"
                android:textColor="@color/black">

                <TextView
                    android:id="@+id/txt_birthdate"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/birthday"
                    android:textColor="@color/secondary_text" />

            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:id="@+id/btn_select_birthdate"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:drawableTint="@color/divider"
                android:src="@drawable/ic_calendar_grey600_24dp" />
        </LinearLayout>


        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_birthdate"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@drawable/bkg_button"
            android:elevation="@dimen/elevation_button_resting_2dp"
            android:text="@string/signup"
            android:textColor="@color/icons" />

    </RelativeLayout>
</layout>